Source/WebCore/style/RenderTreeUpdater.h
@@ -47,8 +47,7 @@ public:
 
     void commit(std::unique_ptr<const Style::Update>);
 
-    enum class TeardownType { Normal, KeepHoverAndActive };
-    static void tearDownRenderers(Element&, TeardownType = TeardownType::Normal);
+    static void tearDownRenderers(Element&);
     static void tearDownRenderer(Text&);
 
     class FirstLetter;
@@ -82,6 +81,9 @@ private:
     void pushParent(Element&, Style::Change);
     void popParent();
     void popParentsToDepth(unsigned depth);
+
+    enum class TeardownType { Full, RendererUpdate, RendererUpdateCancelingAnimations };
+    static void tearDownRenderers(Element&, TeardownType);
 
     RenderView& renderView();
 
